# esp-va-sdk

./: CHANGELOG.md  LICENSE  README-Alexa.md  README-Dialogflow.md  README-FIRST.md  README-GVA.md  README-Getting-Started.md  README.md  asset-manifest.json  index.html  patent_disclaimer.txt  precache-manifest.db65f2e420a490135c66f9c364bc3a4a.js  service-worker.js
board_support_pkgs/: README.md
components/audio_board/: audio_board.h  component.mk
components/audio_hal/: CMakeLists.txt  README.md  component.mk  media_hal.c  va_dsp.c
components/audio_hal/button_driver/: CMakeLists.txt  component.mk
components/audio_hal/button_driver/adc/: button_driver.c
components/audio_hal/button_driver/gpio/: button_driver.c
components/audio_hal/button_driver/hollow_button/: button_driver.c
components/audio_hal/button_driver/include/: button_driver.h
components/audio_hal/button_driver/m5_core2/: button_driver.c
components/audio_hal/button_driver/m5_core2_aws/: button_driver.c
components/audio_hal/button_driver/no_button/: button_driver.c
components/audio_hal/display_driver/: CMakeLists.txt  component.mk
components/audio_hal/display_driver/include/: display_driver.h
components/audio_hal/display_driver/m5_core2/: display_driver.c
components/audio_hal/display_driver/m5_core2_aws/: display_driver.c
components/audio_hal/led_driver/: CMakeLists.txt  component.mk
components/audio_hal/led_driver/esp_ledc/: led_driver.c
components/audio_hal/led_driver/hollow_led/: led_driver.c
components/audio_hal/led_driver/include/: led_driver.h  led_driver_utils.c
components/audio_hal/led_driver/is31fl3216/: led_driver.c
components/audio_hal/led_driver/is31fl3236/: led_driver.c
components/audio_hal/led_driver/m5_core2/: led_driver.c
components/audio_hal/led_driver/m5_core2_aws/: led_driver.c
components/audio_hal/led_driver/no_led/: led_driver.c
components/audio_hal/led_driver/ws2812/: led_driver.c
components/audio_pipeline/: CMakeLists.txt  audio_pipeline.c  audio_pipeline.h
components/audio_utils/: CMakeLists.txt
components/basic_player/: CMakeLists.txt  basic_player.c  basic_player.h
components/basic_recorder/: CMakeLists.txt  README.md  basic_recorder.c  basic_recorder.h
components/bluetooth/: CMakeLists.txt  component.mk
components/bluetooth/include/: bluetooth.h
components/bluetooth/src/: bluetooth.c  bluetooth_priv.h  bt_app_av.c  bt_app_av.h
components/codecs/: CMakeLists.txt  component.mk
components/conn_mgr/: component.mk
components/conn_mgr_prov/: CMakeLists.txt
components/dialogflow-proto/: CMakeLists.txt  component.mk
components/esp-alexa/: component.mk
components/esp-downmix/: CMakeLists.txt  component.mk
components/esp-ssdp/: CMakeLists.txt  component.mk
components/esp-voice-assistant/: component.mk
components/esp_httpd_ota/: CMakeLists.txt  README.md
components/httpc/: Kconfig  (+3 more)
components/speech_recog/: CMakeLists.txt  component.mk
components/speech_recog/include/: esp_wwe.h
components/voice_assistant/: CMakeLists.txt  component.mk
components/voice_assistant/include/: aia.h  alerts.h  alexa.h  alexa_equalizer_controller.h  alexa_local_config.h  alexa_smart_home.h  audio_player.h  auth_delegate.h  avs_config.h  dialogflow.h  gva.h  playback_controller.h  prompt.h  smart_home.h  speaker.h  speech_recognizer.h  speech_synthesizer.h  tone.h  va_mqtt.h  va_ui.h  voice_assistant.h  voice_assistant_app_cb.h
esp-idf-patches/: esp-tls-Add-support-for-global-CA-store.-All-mbedtls.patch  memset-i2s-dma-buffers-zero.patch
idf_patches/: component-bt-implement-AVRCP-Target-APIs.patch  components-bt-Add-AVRCP-feature-about-volume.patch
(+598 files in other folders)
